<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">winegrower</string>
    <string name="action_settings">Settings</string>
    <string name="soonSpraying">Ближайшее опрыскивание</string>
    <string name="back">Расчет Баковой Смеси</string>
    <string name="reaktiv">Препараты</string>
    <string name="celendar">Календарь опрыскивания</string>
    <string name="needbuy">Нужно купить</string>
    <string name="information">Информация о препаратах</string>
    <string name="sorts">Сорта Винограда</string>
    <string name="mixture">Необходимый состав баковой смеси</string>
    <string name="backButton1">Назад</string>
    <string name="horus">Хорус</string>
    <string name="horusRasch">Хорус Расчетное</string>
    <string name="horusSumm">Хорус Суммартое </string>
    <string name="sanmayt">Санмайт</string>
    <string name="sanmaytRasch">Санмайт Расчетное</string>
    <string name="sanmaytSumm">Санмайт Суммартое</string>
    <string name="plantafol30">Плантафол 30:10:10</string>
    <string name="plantafol30Rasch">Плантафол 30:10:10 Расчетное</string>
    <string name="plantafol30Summ">Плантафол 30:10:10 Суммартое</string>
    <string name="ridomil">Ридомил Голд</string>
    <string name="ridomilRasch">Ридомил Голд Расчетное</string>
    <string name="ridomilSumm">Ридомил Голд Суммартое</string>
    <string name="topaz">Топаз</string>
    <string name="topazRasch">Топаз Расчетное</string>
    <string name="topazSumm">Топаз Суммартое</string>
    <string name="topsin">Топсин</string>
    <string name="topsinRasch">Топсин Расчетное</string>
    <string name="topsinSumm">Топсин Суммартое</string>
    <string name="decis">Децис</string>
    <string name="decisRasch">Децис Расчетное</string>
    <string name="decisSumm">Децис Суммартое</string>
    <string name="vuskalKombiB">Вуксал Комби Б</string>
    <string name="vuskalKombiBrasch">Вуксал Комби Б Расчетное</string>
    <string name="vuskalKombiBSumm">Вуксал Комби Б Суммартое</string>
    <string name="maksikropZavyaz">Максикроп Завязь</string>
    <string name="maksikropZavyazRasch">Максикроп Завязь Расчетное</string>
    <string name="maksikropZavyazSumm">Максикроп Завязь Суммартое</string>
    <string name="melodiduo">Мелоди Дуо</string>
    <string name="melodiduoRasch">Мелоди Дуо Расчетное</string>
    <string name="melodiduoSumm">Мелоди Дуо Суммартое</string>
    <string name="falkon">Фалькон</string>
    <string name="falkonRasch">Фалькон Расчетное</string>
    <string name="falkonSumm">Фалькон Суммартое</string>
    <string name="mospilan">Моспилан</string>
    <string name="mospilanRasch">Моспилан Расчетное</string>
    <string name="mospilanSumm">Моспилан Суммартое</string>
    <string name="strobi">Строби</string>
    <string name="strobiRasch">Строби Расчетное</string>
    <string name="strobiSumm">Строби Суммартое</string>
    <string name="kvadris">Квадрис</string>
    <string name="kvadrisRasch">Квадрис Расчетное</string>
    <string name="kvadrisSumm">Квадрис Суммартое</string>
    <string name="plantafol20">Плантафол 20:20:20</string>
    <string name="plantafol20Rasch">Плантафол 20:20:20 Расчетное</string>
    <string name="plantafol20Summ">Плантафол 20:20:20 Суммартое</string>
    <string name="plantafol5">Плантафол 5:15:45</string>
    <string name="plantafol5Rasch">Плантафол 5:15:45 Расчетное</string>
    <string name="plantafol5Summ">Плантафол 5:15:45 Суммартое</string>
    <string name="kuproksat">Купроксат</string>
    <string name="kuproksatRasch">Купроксат Расчетное</string>
    <string name="kuproksatSumm">Купроксат Суммартое</string>
    <string name="tilt">Тилт 250</string>
    <string name="tiltRasch">Тилт 250 Расчетное</string>
    <string name="tiltSumm">Тилт 250 Суммартое</string>
    <string name="raschetZaglavie">Варианты опрыскиваний:</string>
    <string name="backButton2">Назад</string>
    <string name="backButton3">Назад</string>
    <string name="backButton5">Назад</string>
    <string name="backButton4">Назад</string>
    <string name="backButton6">Назад</string>
    <string name="opr1">По пятому листу</string>
    <string name="oprSelect1">Расчитанная -По пятому листу</string>
    <string name="opr2">Перед цветением</string>
    <string name="oprSelect2">Расчитанная -Перед цветением</string>
    <string name="opr3">Во время цветения</string>
    <string name="oprSelect3">Расчитанная -Во время цветения</string>
    <string name="opr4">После цветения</string>
    <string name="oprSelect4">Расчитанная -После цветения</string>
    <string name="opr5">через 21 день 5-10июля</string>
    <string name="oprSelect5">Расчитанная -через 21 день 5-10июля</string>
    <string name="opr6">25 июля - начало августа</string>
    <string name="oprSelect6">Расчитанная -25 июля - начало августа</string>
    <string name="opr7">середина августа</string>
    <string name="oprSelect7">Расчитанная -середина августа</string>
    <string name="opr8">После снятия урожая</string>
    <string name="oprSelect8">Расчитанная -После снятия урожая</string>
    <string name="opr9">Перед укрытием</string>
    <string name="oprSelect9">Расчитанная -Перед укрытием</string>
    <string name="sprayingTitle">ОПРЫСКИВАНИЕ</string>
    <string name="textView17">Рекомендуемые Препараты :</string>
    <string name="textView19">Препарат от Милдью</string>
    <string name="textView20">Препарат от Оидиума</string>
    <string name="textView22">Подкормка</string>
    <string name="textView23">Инсектицид</string>
    <string name="textView24">Для улучшения завязи</string>
    <string name="textView25">Дополнительный препарат</string>
    <string name="buttonRasch">Рассчитать</string>
    <string name="kollVeder">Количество ведер :</string>
    <string name="allarmTitle">ВНИМАНИЕ !!!</string>
    <string name="horusAlert">Хорус - это системный фунгицид,  защищает от : Оидиум, серая гниль, милдью. Препарат от Оидиума не нужен</string>
    <string name="okButton">Ок</string>
    <string name="strobiAlert">Строби - это системный фунгицид,  защищает от : Оидиум, серая гниль, милдью. Препарат от Оидиума не нужен</string>
    <string name="kvadrisAlert">Квадрис - это системный фунгицид,  защищает от : Оидиум, серая гниль, милдью. Препарат от Оидиума не нужен</string>
    <string name="poCvetuAlert">Во врямя цветения нельзя пользоватся препаратами кроме группы \"Для улучшения завязи\"</string>
    <string name="oidiumAlert">Вы не выбрали препарат для борьбы от Оидиума</string>
    <string name="neRaschitansostav">Состав не расчитан</string>
    <string name="choose_date">Выберите дату</string>
    <string name="ready">Готово</string>
    <string name="tvDate1">Введите дату</string>
    <string name="alertNeedbuy">Вам необходимо докупить - </string>
    <string name="gramm"> гр. </string>
    <string name="milliliters"> мл. </string>
    <string name="needBuyShow">Необходимо купить :</string>
    <string name="cancelButton">Не добавлять</string>
    <string name="positiveButton">Добывить в Календарь</string>
    <string name="msgToInform">Вам необходимо : \n</string>
    <string name="positiveChengeSpreyingButton">Изменить в Календаре</string>
    <string name="cancelChengeSpreyingButton">Не изменять</string>
    <string name="msgChangeSpreying">У Вас уже создано это опрыскивание</string>


</resources>
