<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/four"
    android:padding="7dp"
    android:scrollbars="none" >



    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/adnRaschet">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/raschetZaglavie"
            android:id="@+id/raschetZaglavie"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:touchscreenBlocksFocus="false">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerChSpraying"
            android:spinnerMode="dropdown"
            android:entries="@array/choseSpraying"
            android:clickable="true"
            android:layout_gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/prep1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView17"
            android:id="@+id/textView17" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView19"
            android:id="@+id/textView19" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerPrep1"
            android:spinnerMode="dropdown"
            android:entries="@array/preparats1"
            android:clickable="true"
            android:layout_gravity="left" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView20"
            android:id="@+id/textView20" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerPrep2"
            android:spinnerMode="dropdown"
            android:entries="@array/preparats2"
            android:clickable="true"
            android:layout_gravity="left"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView22"
            android:id="@+id/textView22" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerPrep3"
            android:spinnerMode="dropdown"
            android:entries="@array/preparats3"
            android:clickable="true"
            android:layout_gravity="left"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView23"
            android:id="@+id/textView23" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerPrep4"
            android:spinnerMode="dropdown"
            android:entries="@array/preparats4"
            android:clickable="true"
            android:layout_gravity="left"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView24"
            android:id="@+id/textView24" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerPrep5"
            android:spinnerMode="dropdown"
            android:entries="@array/preparats5"
            android:clickable="true"
            android:layout_gravity="left"
            android:focusable="false" />
    </LinearLayout>

        <!--<LinearLayout-->
            <!--android:orientation="vertical"-->
            <!--android:layout_width="300dp"-->
            <!--android:layout_height="wrap_content" >-->

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
                <!--android:text="@string/textView25"-->
                <!--android:id="@+id/textView25" />-->

            <!--<Spinner-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/spinnerPrep6"-->
                <!--android:spinnerMode="dropdown"-->
                <!--android:entries="@array/preparats6"-->
                <!--android:clickable="true"-->
                <!--android:layout_gravity="left"-->
                <!--android:focusable="false" />-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="4">

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/kollVeder"
            android:id="@+id/textView"
                android:layout_weight="3" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_weight="1"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/buttonRasch"
                android:id="@+id/buttonRasch"
                android:layout_weight="1" />

            <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/backButton2"
            android:id="@+id/backButton2"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>